[package]
name = "server-quotes-client"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = 'abort'

[dependencies]
messages = { path = "../messages" }

json = "0.12"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
md5 = "0.7"
openssl-sys = "0.9.93"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "client"
path = "src/main.rs"
