[package]
name = "server-quotes-server"
version = "0.1.0"
edition = "2021"


[dependencies]
messages = { path = "../messages" }

log = "0.4.20"
actix-web = { version = "4" }
futures = "0.3"
env_logger = "0.10.0"
md5 = "0.7"
rand = "0.8"
derive_more = "0.99"

[[bin]]
name = "server"
path = "src/main.rs"
